--- a/index.html
+++ b/index.html
@@ -3,28 +3,164 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles/normalize.css" rel="stylesheet" type="text/css">
+  <link href="styles/style.css" rel="stylesheet" type="text/css"> 
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_header-place page__header"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle pos-absolute">Какие современные и эффективные подходы 
+        к обучению вы можете использовать в своей жизни? 
+        <a class="header__link" href="#">Узнать?→</a></p>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="description">
+      <section class="description content_description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief no-margin">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns-paragraph no-margin">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns-paragraph no-margin"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns-paragraph no-margin">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
-      <section class="digits">
+      <section class="digits content_digits">
+        <h2 class="section-title no-margin">Цифры и факты</h2>
+        <p class="section-subtitle no-margin">Про учёбу и мозг</p>
+        <div class="table">
+          <div class="table__cell">
+            <h3 class="table__heading no-margin no-margin">86 миллиардов</h3>
+            <p class="table__text no-margin">Число нейронов в мозге человека</p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">2.1 миллиарда</h3>
+            <p class="table__text no-margin">Число нуждающихся в повышении квалификации<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">1000 терабайт</h3>
+            <p class="table__text no-margin">Объём памяти человека</p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">500 триллионов</h3>
+            <p class="table__text no-margin">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">420 миллионов</h3>
+            <p class="table__text no-margin">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">17–20 лет</h3>
+            <p class="table__text no-margin">Пик обучаемости</p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">1885 год</h3>
+            <p class="table__text no-margin">Открытие кривой забывания</p>
+          </div>
+
+          <div class="table__cell">
+            <h3 class="table__heading no-margin">1889 год</h3>
+            <p class="table__text no-margin">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
-      <section class="feinman">
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle no-margin">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее→</a>
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <img class="kaufman__triangle" alt="blue rectangle" src="images/kaufman-triangle.svg" width="877" height="877">
+        <div class="table table_theme_dark">
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <p class="table__text table__text_theme_dark"><span class="as">Выберите</span> привлекательный проект.</p>
+          </div>
+
+          <div class="cell cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="footer">
 
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_footer_place"></div>
+          <p class="footer__author">&copy; 2020. Дмитрий Калинин</p>
+        </div>
+
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <a href="#" class="footer__column-links">Главная</a>
+          <a href="#" class="footer__column-links">Концепция</a>
+          <a href="#" class="footer__column-links">Наставники</a>
+        </div>
+          
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Facevook" src="images/facebook_color_white.svg" width="16" height="16">Facebook</a>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок vk" src="images/vk_color_white.svg" width="16" height="16">ВКонтакте</a>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Instagram" src="images/instagram_color_white.svg" width="16" height="16">Instagram</a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
