--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_header-place page__header"></div>
+      <div class="logo logo_place_header page__header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle pos-absolute">Какие современные и эффективные подходы 
         к обучению вы можете использовать в своей жизни? 
@@ -23,9 +23,9 @@
         <div class="two-columns">
           <h2 class="two-columns__brief no-margin">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns-paragraph no-margin">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns-paragraph no-margin"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns-paragraph no-margin">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph no-margin">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph no-margin"><span class="two-columns__span-accent">Вывод:</span></b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph no-margin">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -143,7 +143,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_footer_place"></div>
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2020. Дмитрий Калинин</p>
         </div>
 
