--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/normalize.css" rel="stylesheet" type="text/css">
-  <link href="styles/style.css" rel="stylesheet" type="text/css"> 
+  <link href="styles/style.css" rel="stylesheet" type="text/css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
     <header class="header">
       <div class="logo logo_place_header page__header"></div>
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle pos-absolute">Какие современные и эффективные подходы 
-        к обучению вы можете использовать в своей жизни? 
+        <p class="header__subtitle pos-absolute">Какие современные и эффективные подходы
+        к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать?→</a></p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
@@ -24,7 +24,7 @@
           <h2 class="two-columns__brief no-margin">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph no-margin">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph no-margin"><span class="two-columns__span-accent">Вывод:</span></b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph no-margin"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph no-margin">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
@@ -153,7 +153,7 @@
           <a href="#" class="footer__column-links">Концепция</a>
           <a href="#" class="footer__column-links">Наставники</a>
         </div>
-          
+
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Facevook" src="images/facebook_color_white.svg" width="16" height="16">Facebook</a>
