--- a/index.html
+++ b/index.html
@@ -94,47 +94,47 @@
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">2</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">3</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">4</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">5</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">6</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">7</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">8</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">9</h2>
-            <p class="table__text table__text_theme_dark"><span class="as">Выберите</span> привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
           <div class="cell cell_theme_dark">
             <h2 class="table__heading table__heading_theme_dark">10</h2>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
       </section>
