--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="logo logo_place_header page__header"></div>
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle pos-absolute">Какие современные и эффективные подходы
+        <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать?→</a></p>
       <div class="header__main-illustration"></div>
