--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header page__header"></div>
+      <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
@@ -21,64 +21,64 @@
     <main class="content">
       <section class="description content_description">
         <div class="two-columns">
-          <h2 class="two-columns__brief no-margin">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph no-margin">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph no-margin"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph no-margin">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
 
       <section class="digits content_digits">
-        <h2 class="section-title no-margin">Цифры и факты</h2>
-        <p class="section-subtitle no-margin">Про учёбу и мозг</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <h3 class="table__heading no-margin no-margin">86 миллиардов</h3>
-            <p class="table__text no-margin">Число нейронов в мозге человека</p>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">2.1 миллиарда</h3>
-            <p class="table__text no-margin">Число нуждающихся в повышении квалификации<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">1000 терабайт</h3>
-            <p class="table__text no-margin">Объём памяти человека</p>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">500 триллионов</h3>
-            <p class="table__text no-margin">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">420 миллионов</h3>
-            <p class="table__text no-margin">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">17–20 лет</h3>
-            <p class="table__text no-margin">Пик обучаемости</p>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">1885 год</h3>
-            <p class="table__text no-margin">Открытие кривой забывания</p>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
 
           <div class="table__cell">
-            <h3 class="table__heading no-margin">1889 год</h3>
-            <p class="table__text no-margin">Открытие условного рефлекса</p>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle no-margin">Выучить и не забыть.</p>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее→</a>
       </section>
 
