--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/normalize.css" rel="stylesheet" type="text/css">
-  <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="pages/index.css" rel="stylesheet" type="text/css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -14,10 +14,11 @@
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#">Узнать?→</a></p>
+        <a class="header__link" href="#">Узнать?&#8594;</a></p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation header__square-pic_rotation"></div>
     </header>
+
     <main class="content">
       <section class="description content_description">
         <div class="two-columns">
@@ -28,6 +29,65 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="Книга">
+            <h2 class="cards__title">Два вида внимания</h2> 
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
+            <h2 class="cards__title">Recall</h2> 
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Много людей в здании">
+            <h2 class="cards__title">Интерливинг</h2> 
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="Человек в комнате с множеством окон">
+            <h2 class="cards__title">Вопросы</h2> 
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на руке">
+            <h2 class="cards__title">Иллюзия компетентности</h2> 
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle video_">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link">Подробнее&#8594;</a>
       </section>
 
       <section class="digits content_digits">
@@ -76,66 +136,85 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее→</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" alt="Книга Весь мир - школа" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <img class="kaufman__triangle" alt="blue rectangle" src="images/kaufman-triangle.svg" width="877" height="877">
+        <img class="kaufman__triangle rotation kaufman__triangle_rotation" alt="blue rectangle" src="images/kaufman-triangle.svg" width="877" height="877">
         <div class="table table_theme_dark">
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
           <div class="cell cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
+        </div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img src="images/logo/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo">
+          <img src="images/logo/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
+          <img src="images/logo/resources-strelka.svg" alt="Логотип Стрелка" class="resources__logo">
+          <img src="images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
         </div>
       </section>
     </main>
