--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <img class="kaufman__triangle rotation" alt="blue rectangle" src="images/kaufman-triangle.svg">
         <div class="table table_theme_dark">
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
